--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,8 @@ td{
 
 }
 
-p{
-    border: 1px solid red;
-    display: none;
+#display-msg{
+    font-weight: 500;
+    font-size: 2rem;
+    margin: 2rem auto;
 }
