--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,8 @@ td{
 }
 
 #display-msg{
-    font-weight: 500;
+    font-weight: 800;
     font-size: 2rem;
     margin: 2rem auto;
+    color: red;
 }
